    - futex: Use pi_state_update_owner() in put_pi_state()
    - futex: Simplify fixup_pi_state_owner()
    - futex: Handle faults correctly for PI futexes
  * Bump ABI to 3
  * xen: Fix XenStore initialisation for XS_LOCAL
  * [rt] Refresh "printk: refactor kmsg_dump_get_buffer()"
  * [rt] Refresh "locking/rtmutex: Handle the various new futex race
    conditions"

 -- Bastian Blank <waldi@debian.org>  Mon, 25 Jan 2021 15:22:26 +0100

linux (5.10.9-1) unstable; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.10.6
    - [arm64] rtc: pcf2127: move watchdog initialisation to a separate
      function
    - [arm64] rtc: pcf2127: only use watchdog when explicitly available
    - dt-bindings: rtc: add reset-source property
    - kdev_t: always inline major/minor helper functions
    - ALSA: hda/realtek - Modify Dell platform name
    - ALSA: hda/hdmi: Fix incorrect mutex unlock in silent_stream_disable()
    - [x86] drm/i915/tgl: Fix Combo PHY DPLL fractional divider for 38.4MHz
      ref clock
    - RDMA/core: remove use of dma_virt_ops
    - RDMA/siw,rxe: Make emulated devices virtual in the device tree
    - fuse: fix bad inode
    - perf: Break deadlock involving exec_update_mutex
    - rwsem: Implement down_read_killable_nested
    - rwsem: Implement down_read_interruptible
    - exec: Transform exec_update_mutex into a rw_semaphore
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.10.7
    - i40e: Fix Error I40E_AQ_RC_EINVAL when removing VFs
    - iavf: fix double-release of rtnl_lock
    - net/sched: sch_taprio: ensure to reset/destroy all child qdiscs
    - [arm64,armhf] net: mvpp2: Add TCAM entry to drop flow control pause
      frames
    - [arm64,armhf] net: mvpp2: prs: fix PPPoE with ipv6 packet parse
    - atm: idt77252: call pci_disable_device() on error path
    - [arm64,armhf] net: mvpp2: Fix GoP port 3 Networking Complex Control
      configurations