@@ -253,6 +253,7 @@ linux (5.10.12-1) UNRELEASED; urgency=medium
   * [rt] Refresh "printk: refactor kmsg_dump_get_buffer()"
   * [rt] Refresh "locking/rtmutex: Handle the various new futex race
     conditions"
+  * [rt] Refresh "locking/rtmutex: add sleeping lock implementation"
 
  -- Bastian Blank <waldi@debian.org>  Mon, 25 Jan 2021 15:22:26 +0100
 
